--- a/TensorFlow/10. Dropout & Overfitting.ipynb
+++ b/TensorFlow/10. Dropout & Overfitting.ipynb
@@ -17,7 +17,9 @@
      "output_type": "stream",
      "text": [
       "/anaconda/lib/python3.6/importlib/_bootstrap.py:205: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
+      "  return f(*args, **kwds)\n",
+      "/anaconda/lib/python3.6/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
    ],
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -106,8 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xs = tf.placeholder(shape=[None, 64], dtype=tf.float32, name='data')\n",
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,43 +160,43 @@
      "output_type": "stream",
      "text": [
       "Step 0 ------------\n",
-      "Train loss: 4.52247\n",
-      "Test  loss: 4.27316\n",
+      "Train loss: 5.20166\n",
+      "Test  loss: 5.16893\n",
       "Step 50 ------------\n",
-      "Train loss: 0.519279\n",
-      "Test  loss: 0.621414\n",
+      "Train loss: 0.608804\n",
+      "Test  loss: 0.593022\n",
       "Step 100 ------------\n",
-      "Train loss: 0.298374\n",
-      "Test  loss: 0.389788\n",
+      "Train loss: 0.375994\n",
+      "Test  loss: 0.385483\n",
       "Step 150 ------------\n",
-      "Train loss: 0.23237\n",
-      "Test  loss: 0.312131\n",
+      "Train loss: 0.28977\n",
+      "Test  loss: 0.303901\n",
       "Step 200 ------------\n",
-      "Train loss: 0.197495\n",
-      "Test  loss: 0.273861\n",
+      "Train loss: 0.242276\n",
+      "Test  loss: 0.260062\n",
       "Step 250 ------------\n",
-      "Train loss: 0.173118\n",
-      "Test  loss: 0.242986\n",
+      "Train loss: 0.207227\n",
+      "Test  loss: 0.228767\n",
       "Step 300 ------------\n",
-      "Train loss: 0.159144\n",
-      "Test  loss: 0.225545\n",
+      "Train loss: 0.178415\n",
+      "Test  loss: 0.205939\n",
       "Step 350 ------------\n",
-      "Train loss: 0.147115\n",
-      "Test  loss: 0.203126\n",
+      "Train loss: 0.159978\n",
+      "Test  loss: 0.192223\n",
       "Step 400 ------------\n",
-      "Train loss: 0.136872\n",
-      "Test  loss: 0.1958\n",
+      "Train loss: 0.141427\n",
+      "Test  loss: 0.175726\n",
       "Step 450 ------------\n",
-      "Train loss: 0.128238\n",
-      "Test  loss: 0.186488\n",
+      "Train loss: 0.130555\n",
+      "Test  loss: 0.165017\n",
       "--------------------------\n"
      ]
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACr9JREFUeJzt3d2LXeUZhvH77mhorTYDrS2aCZ0cSEAKTUQCkqI2YolV\nTIUeJKCYUMiRYmhBtEf2D1DSgyKEqCOYKm3UIGIVi18VWmsSx9ZMYknjSCZoo5T4ddAh8enBrECU\nyF4z+13v3vNw/SA4M9nM+2zlcq3Zs/Z6HRECkNPXBj0AgO4QOJAYgQOJETiQGIEDiRE4kBiBA4kR\nOJAYgQOJndPFN7Vd7fK4JUuW1FpKy5cvr7aWJI2OjlZb69SpU9XWmpqaqrbW7OxstbVqiwj3ekwn\ngdd08cUXV1vr3nvvrbaWJG3YsKHaWh999FG1tVatWlVtrenp6WprDSNO0YHECBxIjMCBxAgcSIzA\ngcQIHEiMwIHECBxIrFXgttfbftv2Ydt3dT0UgDJ6Bm57RNLvJF0n6VJJm2xf2vVgAPrX5gi+RtLh\niDgSEbOSHpNU7xpKAAvWJvBlko6e8flM8zUAQ67Ym01sb5W0tdT3A9C/NoEfk3Tm+yTHmq99QUTs\nkLRDqvt2UQBfrc0p+uuSLrG9wvYSSRslPdXtWABK6HkEj4iTtm+T9JykEUkPRsSBzicD0LdWP4NH\nxDOSnul4FgCFcSUbkBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kt+p1NJiYmqq111VVXVVtLqrvb\nyNKlS6utNT4+Xm0tdjYBkBaBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJBYm51NHrR93PZbNQYC\nUE6bI/iEpPUdzwGgAz0Dj4hXJP23wiwACuNncCAxti4CEisWOFsXAcOHU3QgsTa/JntU0l8lrbQ9\nY/sX3Y8FoIQ2e5NtqjEIgPI4RQcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgsUW/ddHmzZurrTU6\nOlptLUk6ceJEtbXeeeedamuhHo7gQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4k1uam\ni8ttv2h7yvYB23fUGAxA/9pci35S0q8iYr/tCyTts/18REx1PBuAPrXZm+y9iNjffPyJpIOSlnU9\nGID+zevdZLbHJa2W9NpZ/o6ti4Ah0zpw2+dLelzStoj4+Mt/z9ZFwPBp9Sq67XM1F/euiHii25EA\nlNLmVXRLekDSwYi4r/uRAJTS5gi+VtItktbZnmz+/LTjuQAU0GZvslclucIsAArjSjYgMQIHEiNw\nIDECBxIjcCAxAgcSI3AgMQIHEnNE+feF8GaTMiYmJqqtdfXVV1dba3x8vNpamUVEzwvQOIIDiRE4\nkBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4m1ueni123/3fabzdZFv6kxGID+tbkv+v8krYuIT5vb\nJ79q+08R8beOZwPQpzY3XQxJnzafntv84VpzYBFou/HBiO1JScclPR8RZ926yPZe23tLDwlgYVoF\nHhGnImKVpDFJa2z/4CyP2RERl0fE5aWHBLAw83oVPSJOSHpR0vpuxgFQUptX0S+0Pdp8/A1J10o6\n1PVgAPrX5lX0iyQ9bHtEc/9D+ENEPN3tWABKaPMq+j80tyc4gEWGK9mAxAgcSIzAgcQIHEiMwIHE\nCBxIjMCBxAgcSKzNlWxo1NzeR5JuvfXWamvddNNN1dZCPRzBgcQIHEiMwIHECBxIjMCBxAgcSIzA\ngcQIHEiMwIHEWgfe3Bv9Ddvcjw1YJOZzBL9D0sGuBgFQXtudTcYkXS9pZ7fjACip7RF8u6Q7JX3e\n4SwACmuz8cENko5HxL4ej2NvMmDItDmCr5V0o+1pSY9JWmf7kS8/iL3JgOHTM/CIuDsixiJiXNJG\nSS9ExM2dTwagb/weHEhsXnd0iYiXJL3UySQAiuMIDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBi\nbF00D/fcc0/V9V5++eVqa01PT1dba8+ePdXWqvm8JGnbtm1V1+uFIziQGIEDiRE4kBiBA4kROJAY\ngQOJETiQGIEDiRE4kFirK9maO6p+IumUpJPcORVYHOZzqeqPI+LDziYBUByn6EBibQMPSX+2vc/2\n1i4HAlBO21P0H0XEMdvflfS87UMR8cqZD2jCJ35giLQ6gkfEseafxyU9KWnNWR7D1kXAkGmz+eA3\nbV9w+mNJP5H0VteDAehfm1P070l60vbpx/8+Ip7tdCoARfQMPCKOSPphhVkAFMavyYDECBxIjMCB\nxAgcSIzAgcQIHEiMwIHECBxIzBFR/pva5b/pEOji3xW6tWXLlqrrTUxMVFsrItzrMRzBgcQIHEiM\nwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHEWgVue9T2btuHbB+0fUXXgwHoX9v7ov9W0rMR8XPbSySd\n1+FMAArpGbjtpZKulLRZkiJiVtJst2MBKKHNKfoKSR9Iesj2G7Z3NvdHBzDk2gR+jqTLJN0fEasl\nfSbpri8/yPZW23tt7y08I4AFahP4jKSZiHit+Xy35oL/ArYuAoZPz8Aj4n1JR22vbL50jaSpTqcC\nUETbV9Fvl7SreQX9iKS676IHsCCtAo+ISUmcegOLDFeyAYkROJAYgQOJETiQGIEDiRE4kBiBA4kR\nOJAYgQOJtb1UFZLefffdquuNjo5WW2tycrLaWtu3b6+21p49e6qtNYw4ggOJETiQGIEDiRE4kBiB\nA4kROJAYgQOJETiQGIEDifUM3PZK25Nn/PnY9rYawwHoT89LVSPibUmrJMn2iKRjkp7seC4ABcz3\nFP0aSf+OiLoXZQNYkPm+2WSjpEfP9he2t0ra2vdEAIppfQRvNj24UdIfz/b3bF0EDJ/5nKJfJ2l/\nRPynq2EAlDWfwDfpK07PAQynVoE3+4FfK+mJbscBUFLbvck+k/TtjmcBUBhXsgGJETiQGIEDiRE4\nkBiBA4kROJAYgQOJETiQmCOi/De1P5A037eUfkfSh8WHGQ5ZnxvPa3C+HxEX9npQJ4EvhO29Wd+J\nlvW58byGH6foQGIEDiQ2TIHvGPQAHcr63HheQ25ofgYHUN4wHcEBFDYUgdteb/tt24dt3zXoeUqw\nvdz2i7anbB+wfcegZyrJ9ojtN2w/PehZSrI9anu37UO2D9q+YtAz9WPgp+jNvdb/pbk7xsxIel3S\npoiYGuhgfbJ9kaSLImK/7Qsk7ZP0s8X+vE6z/UtJl0v6VkTcMOh5SrH9sKS/RMTO5kaj50XEiUHP\ntVDDcARfI+lwRByJiFlJj0naMOCZ+hYR70XE/ubjTyQdlLRssFOVYXtM0vWSdg56lpJsL5V0paQH\nJCkiZhdz3NJwBL5M0tEzPp9RkhBOsz0uabWk1wY7STHbJd0p6fNBD1LYCkkfSHqo+fFjZ3M/wkVr\nGAJPzfb5kh6XtC0iPh70PP2yfYOk4xGxb9CzdOAcSZdJuj8iVkv6TNKifk1oGAI/Jmn5GZ+PNV9b\n9Gyfq7m4d0VEljvSrpV0o+1pzf04tc72I4MdqZgZSTMRcfpMa7fmgl+0hiHw1yVdYntF86LGRklP\nDXimvtm25n6WOxgR9w16nlIi4u6IGIuIcc39t3ohIm4e8FhFRMT7ko7aXtl86RpJi/pF0fnuTVZc\nRJy0fZuk5ySNSHowIg4MeKwS1kq6RdI/bU82X/t1RDwzwJnQ2+2SdjUHmyOStgx4nr4M/NdkALoz\nDKfoADpC4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBi/welDI4dpINvvwAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACoRJREFUeJzt3e+r1vUdx/HXa6diazUF10Z4ZHojhBhMI4RwZDMatiJ3\nYzcUChcDbxUdNgjbrfwH4uzGCMTMIJdslhDRikZJC7aW2nFLjw0nZ3jMZjFE68bEeu/G+TosHNf3\neH2+P643zwdI58fF+byv6un3e13nur4fR4QA5PSVrgcA0BwCBxIjcCAxAgcSI3AgMQIHEiNwIDEC\nBxIjcCCxq5r4obZ5eVwBY2Njra21ZMmS1tZatGhRa2t98MEHra0lSadOnWptrYjwoNu4iZeqEngZ\nCxcubG2tycnJ1tbatGlTa2tt3bq1tbUk6fHHH29trTqBc4oOJEbgQGIEDiRG4EBiBA4kRuBAYgQO\nJEbgQGK1Are9zvb7to/Z3tL0UADKGBi47TFJv5Z0t6SbJW20fXPTgwEYXp0j+CpJxyLieEScl7Rb\n0vpmxwJQQp3AF0s6ccnns9XXAPRcsXeT2d4saXOpnwdgeHUCPynp0vcSjldf+4KI2CZpm8S7yYC+\nqHOK/o6km2wvs32NpA2SXmx2LAAlDDyCR8QF2w9JelXSmKQdEXG48ckADK3WY/CIeFnSyw3PAqAw\nXskGJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGKNbF3UpjZ3/5iYmGhtrbbXW7BgQWtrtanN/z/6\niCM4kBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJBYnZ1Ndtg+bfu9NgYCUE6dI/hOSesangNA\nAwYGHhFvSvp3C7MAKIzH4EBibF0EJFYscLYuAvqHU3QgsTq/JntO0p8kLbc9a/tnzY8FoIQ6e5Nt\nbGMQAOVxig4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYiO/ddHk5GRra23atKm1tSTp0KFDra01\nMzPT2lrr169vba0zZ860tlYfcQQHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCCxOhdd\nXGL7DdtHbB+2/UgbgwEYXp3Xol+Q9IuIOGj7ekkHbL8WEUcang3AkOrsTXYqIg5WH5+TNC1pcdOD\nARjevN5NZnuppJWS3r7M99i6COiZ2oHbvk7S85ImIuLsl7/P1kVA/9R6Ft321ZqLe1dEvNDsSABK\nqfMsuiU9JWk6Ip5ofiQApdQ5gq+W9ICktbanqj8/anguAAXU2ZvsLUluYRYAhfFKNiAxAgcSI3Ag\nMQIHEiNwIDECBxIjcCAxAgcSG/m9ySYmJlpba+fOna2tJUn79u1rba2271tb2vx32EccwYHECBxI\njMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxOpcdPGrtv9i+1C1ddHWNgYDMLw6L1X9j6S1EfFJdfnk\nt2z/PiL+3PBsAIZU56KLIemT6tOrqz9sbACMgLobH4zZnpJ0WtJrEXHZrYts77e9v/SQAK5MrcAj\n4rOIWCFpXNIq29+9zG22RcStEXFr6SEBXJl5PYseEWckvSFpXTPjACipzrPoN9heWH38NUl3STra\n9GAAhlfnWfQbJT1je0xzfyH8NiJeanYsACXUeRb9r5rbExzAiOGVbEBiBA4kRuBAYgQOJEbgQGIE\nDiRG4EBiBA4k5rl3gxb+oTZvJx0xbW7xs2bNmtbWst3aWm2LiIF3jiM4kBiBA4kROJAYgQOJETiQ\nGIEDiRE4kBiBA4kROJBY7cCra6O/a5vrsQEjYj5H8EckTTc1CIDy6u5sMi7pHknbmx0HQEl1j+CT\nkh6V9HmDswAorM7GB/dKOh0RBwbcjr3JgJ6pcwRfLek+2zOSdktaa/vZL9+IvcmA/hkYeEQ8FhHj\nEbFU0gZJr0fE/Y1PBmBo/B4cSKzO3mT/ExH7JO1rZBIAxXEEBxIjcCAxAgcSI3AgMQIHEiNwIDEC\nBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwILFal2yqrqh6TtJnki5w5VRg\nNMznmmw/iIiPG5sEQHGcogOJ1Q08JP3B9gHbm5scCEA5dU/Rvx8RJ21/S9Jrto9GxJuX3qAKn/iB\nHql1BI+Ik9U/T0vaK2nVZW7D1kVAz9TZfPDrtq+/+LGkH0p6r+nBAAyvzin6tyXttX3x9r+JiFca\nnQpAEQMDj4jjkr7XwiwACuPXZEBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kNp/3gwMjZ8WKFa2u\nNzU11ep6g3AEBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcSqxW47YW299g+anva9m1NDwZg\neHVfqvorSa9ExE9sXyPp2gZnAlDIwMBtL5B0u6SfSlJEnJd0vtmxAJRQ5xR9maSPJD1t+13b26vr\nowPouTqBXyXpFklPRsRKSZ9K2vLlG9nebHu/7f2FZwRwheoEPitpNiLerj7fo7ngv4Cti4D+GRh4\nRHwo6YTt5dWX7pR0pNGpABRR91n0hyXtqp5BPy7pweZGAlBKrcAjYkoSp97AiOGVbEBiBA4kRuBA\nYgQOJEbgQGIEDiRG4EBiBA4kRuBAYuxNBknSzMxMa2utWbOmtbXuuOOO1taS2JsMQIsIHEiMwIHE\nCBxIjMCBxAgcSIzAgcQIHEiMwIHEBgZue7ntqUv+nLU90cZwAIYz8KWqEfG+pBWSZHtM0klJexue\nC0AB8z1Fv1PSPyLin00MA6Cs+b7ZZIOk5y73DdubJW0eeiIAxdQ+glebHtwn6XeX+z5bFwH9M59T\n9LslHYyIfzU1DICy5hP4Rv2f03MA/VQr8Go/8LskvdDsOABKqrs32aeSFjU8C4DCeCUbkBiBA4kR\nOJAYgQOJETiQGIEDiRE4kBiBA4k5Isr/UPsjSfN9S+k3JX1cfJh+yHrfuF/d+U5E3DDoRo0EfiVs\n78/6TrSs94371X+cogOJETiQWJ8C39b1AA3Ket+4Xz3Xm8fgAMrr0xEcQGG9CNz2Otvv2z5me0vX\n85Rge4ntN2wfsX3Y9iNdz1SS7THb79p+qetZSrK90PYe20dtT9u+reuZhtH5KXp1rfW/a+6KMbOS\n3pG0MSKOdDrYkGzfKOnGiDho+3pJByT9eNTv10W2fy7pVknfiIh7u56nFNvPSPpjRGyvLjR6bUSc\n6XquK9WHI/gqScci4nhEnJe0W9L6jmcaWkScioiD1cfnJE1LWtztVGXYHpd0j6TtXc9Sku0Fkm6X\n9JQkRcT5UY5b6kfgiyWduOTzWSUJ4SLbSyWtlPR2t5MUMynpUUmfdz1IYcskfSTp6erhx/bqeoQj\nqw+Bp2b7OknPS5qIiLNdzzMs2/dKOh0RB7qepQFXSbpF0pMRsVLSp5JG+jmhPgR+UtKSSz4fr742\n8mxfrbm4d0VElivSrpZ0n+0ZzT2cWmv72W5HKmZW0mxEXDzT2qO54EdWHwJ/R9JNtpdVT2pskPRi\nxzMNzbY191huOiKe6HqeUiLisYgYj4ilmvtv9XpE3N/xWEVExIeSTtheXn3pTkkj/aTofPcmKy4i\nLth+SNKrksYk7YiIwx2PVcJqSQ9I+pvtqeprv4yIlzucCYM9LGlXdbA5LunBjucZSue/JgPQnD6c\nogNoCIEDiRE4kBiBA4kROJAYgQOJETiQGIEDif0XqN98jYTy1NUAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10242df98>"
+       "<matplotlib.figure.Figure at 0x1183019e8>"
       ]
      },
      "metadata": {},
@@ -202,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction: 2\n"
+      "Prediction: 1\n"
      ]
     }
    ],
