--- a/Social Network Analysis/Week 1/exercises/6_Loading_graphs_in_networkx.ipynb
+++ b/Social Network Analysis/Week 1/exercises/6_Loading_graphs_in_networkx.ipynb
@@ -3693,75 +3693,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>outcome</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>330</th>\n",
-       "      <td>109.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>467</th>\n",
-       "      <td>103.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>456</th>\n",
-       "      <td>88.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>461</th>\n",
-       "      <td>88.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     outcome\n",
-       "330    109.0\n",
-       "467    103.0\n",
-       "98      94.0\n",
-       "456     88.0\n",
-       "461     88.0"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'win_count' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-49f55f93896a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwin_count\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlargest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'outcome'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'win_count' is not defined"
+     ]
     }
    ],
    "source": [
     "win_count.nlargest(5, 'outcome')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "\n",
+    "G=nx.MultiGraph()\n",
+    "G.add_node('A',role='manager')\n",
+    "G.add_edge('A','B',relation = 'friend')\n",
+    "G.add_edge('A','C', relation = 'business partner')\n",
+    "G.add_edge('A','B', relation = 'classmate')\n",
+    "G.node['A']['role'] = 'team member'\n",
+    "G.node['B']['role'] = 'engineer'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'relation': 'business partner'}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.edge['A']['C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "\n",
+    "G=nx.MultiGraph()\n",
+    "G.add_node('A',role='manager')\n",
+    "G.add_edge('A','B',relation = 'friend')\n",
+    "G.add_edge('A','C', relation = 'business partner')\n",
+    "G.add_edge('A','B', relation = 'classmate')\n",
+    "G.node['A']['role'] = 'team member'\n",
+    "G.node['B']['role'] = 'engineer'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'team member'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.node['A']['role']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
