--- a/Social Network Analysis/Week 2/exercises/10_Assignment_of_all.ipynb
+++ b/Social Network Analysis/Week 2/exercises/10_Assignment_of_all.ipynb
@@ -24,30 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#Sender\tRecipient\ttime\r\n",
-      "1\t2\t1262454010\r\n",
-      "1\t3\t1262454010\r\n",
-      "1\t4\t1262454010\r\n",
-      "1\t5\t1262454010\r\n",
-      "1\t6\t1262454010\r\n",
-      "1\t7\t1262454010\r\n",
-      "1\t8\t1262454010\r\n",
-      "1\t9\t1262454010\r\n",
-      "1\t10\t1262454010\r\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import networkx as nx\n",
     "\n",
     "# This line must be commented out when submitting to the autograder\n",
-    "!head email_network.txt"
+    "# !head email_network.txt"
    ]
   },
   {
@@ -63,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -185,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -316,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -344,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -378,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
