--- a/Social Network Analysis/Week 2/exercises/10_Assignment+2.ipynb
+++ b/Social Network Analysis/Week 2/exercises/10_Assignment+2.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -86,8 +86,8 @@
     "        \n",
     "    # Your Code Here\n",
     "    g = answer_one()\n",
-    "    num_employees = g.nodes()\n",
-    "    num_emails = g.edges()\n",
+    "    num_employees = len(set(g.nodes()))\n",
+    "    num_emails = len(set(g.edges()))\n",
     "    \n",
     "    return num_employees, num_emails # Your Answer Here"
    ]
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -150,11 +150,9 @@
    "outputs": [],
    "source": [
     "def answer_four():\n",
-    "        \n",
-    "    # Your Code Here\n",
-    "    num_nodes = len(sorted(nx.weakly_connected_components(g))[0])\n",
-    "    \n",
-    "    return num_nodes  # Your Answer Here"
+    "    G = answer_one()\n",
+    "    wccs = nx.weakly_connected_components(G)\n",
+    "    return len(max(wccs, key=len))"
    ]
   },
   {
